se agrega padding

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     
     <div id="quienesomos"></div>
 
-    <div class=" container text-center mt-3">
+    <div class=" container text-center mt-3 pt-5">
       <h1>Quiénes somos</h1>
       <hr class="my-2 separador-texto">
       <div class="row mt-5">
